# AgentMakefile

./: .gitignore  AGENTS.md  AgentMakefile  CLAUDE.md  README.md  pyproject.toml  setup.cfg
.cursor/rules/: agentmakefile-self-hosting.mdc
.github/workflows/: test.yml
benchmarks/: README.md  agentmf-self-hosting.yaml  clawbench-routing-compare.py  clawbench-routing-comparison.md  clawbench-routing-tasks.jsonl  swebench-lite-agentmf-harnesses.jsonl  swebench-lite-codex-mini-10-report.md  swebench-lite-comparison.md  swebench-lite-cross-repo-20-ab-report.md  swebench-lite-cross-repo-20.jsonl  swebench-lite-haiku-30.jsonl  swebench-lite-haiku-sympy-cached-10.jsonl  swebench-lite-pass-report.md  swebench-lite-results.example.jsonl  swebench-lite-subset.jsonl
benchmarks/routing/: openclaw-skills-comparison.md  openclaw-skills.yaml
benchmarks/swebench-haiku-3way/: README.md  evaluate.py  run.py
config/: pricing.example.yaml
demos/: README.md
demos/budget-aware/: AgentMakefile  README.md
demos/evo-feedback-loop-demo/: run.py
demos/evo-openclaw-tier/: README.md  run.py
demos/karpathy/: AgentMakefile
demos/local-composition/: AgentMakefile
demos/model-routing/: AgentMakefile  README.md
demos/oh-my-openagent/: AgentMakefile
demos/runtime-walkthrough/: AgentMakefile  expected-output.invalid.json  expected-output.valid.json  plan.md
demos/superpowers/: AgentMakefile
deploy/: agentmf-serve.Dockerfile
docs/: agentmemory_kernel_design.md  agentmf_agent_harness_architecture.md  agentmf_benchmark_cli_spec.md  agentmf_budget_aware_spec.md  agentmf_evolution_skill_workshop_spec.md  agentmf_guidance_ingestion_spec.md  agentmf_harness_benchmark_suite_spec.md  agentmf_model_routing_spec.md  agentmf_openclaw_importer_spec.md  agentmf_plugin_adapter_examples.md  agentmf_plugin_adapter_spec.md  agentmf_runtime_cli_spec.md  agentmf_serve_api_spec.md  agentmf_step_by_step_demo.md  agentsfile_design_spec.md  aigg_memory_kernel_design.md  memory_as_skills_design.md  skill_memory_relationship.md  spec_breakdown.md  typed_memory_design.md
modules/: README.md
plugins/opencode/: README.md  (+2 more)
tests/: test_agentmemory.py  test_agentmemory_markdown.py  test_agentmf.py  test_aigg_memory.py  test_aigg_memory_markdown.py  test_aigg_memory_units.py  test_serve_memory.py
(+78 files in other folders)
