[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmf"
version = "0.1.0"
description = "Deterministic AgentMakefile compiler"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.0,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0,<9.0",
]

[project.scripts]
agentmf = "agentmf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
