[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmf"
version = "0.1.0"
description = "Deterministic AgentMakefile compiler"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.0,<5.0",
  "pydantic>=2.0,<3.0",
  "PyYAML>=6.0,<7.0",
  # numpy powers the embedding-based skill matcher; small, stable, no
  # heavyweight ML deps come with it.
  "numpy>=1.21",
  # The agent-memory kernel, extracted to its own repo (zero agentmf dep).
  # Installed from git until published to PyPI.
  "aigg-memory @ git+https://github.com/jianmliu/aigg-memory@v0.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0,<9.0",
]
# Pulls in sentence-transformers (and transitively torch + transformers)
# so `agentmf embed` can use real semantic embeddings instead of the
# deterministic HashEmbedder fallback. ~500MB on install.
embedding = [
  "sentence-transformers>=2.0",
]

[project.scripts]
agentmf = "agentmf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
