[metadata]
name = agentmf
version = 0.1.0
description = Deterministic AgentMakefile compiler
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.0,<3.0
    PyYAML>=6.0,<7.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0,<9.0

[options.entry_points]
console_scripts =
    agentmf = agentmf.cli:main
